# qt5project

./: CMakeLists.txt  main.cpp  mainwindow.ui
